--- a/app/src/main/res/layout/item_recharge_record.xml
+++ b/app/src/main/res/layout/item_recharge_record.xml
@@ -89,6 +89,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/tv_payment_account"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -96,7 +97,7 @@
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:text="100元"
-                android:textColor="#FF333333"
+                android:textColor="@color/text_color"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -117,6 +118,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/tv_payment_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -124,7 +126,7 @@
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:text="100元"
-                android:textColor="#FF333333"
+                android:textColor="@color/text_color"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -145,6 +147,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/tv_payment_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -152,7 +155,7 @@
                 android:text="100元"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textColor="#FF333333"
+                android:textColor="@color/text_color"
                 android:textSize="14sp" />
 
         </LinearLayout>
