--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,11 +7,12 @@
     <include layout="@layout/include_activity_header" />
 
     <TextView
+        android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
-        android:text="验证码登录"
+        android:text="密码登录"
         android:textColor="@color/text_color"
         android:textSize="28sp" />
 
@@ -52,7 +53,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="@string/input_password"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:maxLength="20"
                 android:maxLines="1"
                 android:paddingBottom="13dp"
@@ -72,6 +73,16 @@
                 android:text="@string/get_verification_code"
                 android:textColor="@color/text_gray_color"
                 android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/btn_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingBottom="10dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:src="@mipmap/pwd_close" />
 
         </LinearLayout>
 
