--- a/app/src/main/res/layout/dialog_company_select.xml
+++ b/app/src/main/res/layout/dialog_company_select.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="20dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="@string/confirm_account"
+            android:text="选择燃气集团"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_title" />
 
