--- a/app/src/main/res/layout/dialog_search_address.xml
+++ b/app/src/main/res/layout/dialog_search_address.xml
@@ -50,7 +50,8 @@
             android:id="@+id/search_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white" />
+            android:background="@color/white"
+            android:visibility="gone" />
 
         <cn.ygyg.cloudpayment.widget.EmptyView
             android:id="@+id/empty_view"
