--- a/app/src/main/res/layout/activity_address_selector.xml
+++ b/app/src/main/res/layout/activity_address_selector.xml
@@ -14,6 +14,7 @@
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="34dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="11dp"
         android:layout_marginStart="11dp"
         android:layout_marginTop="15dp"
