--- a/app/src/main/res/layout/activity_address_selector.xml
+++ b/app/src/main/res/layout/activity_address_selector.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/shape_solid_gray"
         android:gravity="center_vertical"
-        android:hint="输入城市名/拼音或者字母查询"
+        android:hint="@string/hint_input_city_search"
         android:paddingEnd="15dp"
         android:paddingStart="15dp"
         android:textColorHint="@color/text_hint_color"
