--- a/app/src/main/res/layout/layout_refresh_header.xml
+++ b/app/src/main/res/layout/layout_refresh_header.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:textSize="16sp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:text="下拉刷新"/>
 
 </LinearLayout>
